fixed some issues with processing and storage and kafkaconnection with storage and receiver

--- a/Storage/app_conf.yml
+++ b/Storage/app_conf.yml
@@ -9,3 +9,6 @@ events:
   hostname: kafka-acit3855.canadacentral.cloudapp.azure.com
   port: 9092
   topic: events
+connection:
+  max_retries: 5
+  sleep_time: 5
