--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -53,6 +53,10 @@ services:
     image: receiver
     ports:
       - "8080:8080"
+    environment:
+      - TARGET_ENV: test
+    volumes:
+      - /home/azureuser/config/receiver:/config
     depends_on:
       - "kafka"
 
@@ -62,6 +66,10 @@ services:
       - "8090:8090"
     environment:
       DB_PASS: ""
+    environment:
+      - TARGET_ENV: test
+    volumes:
+      - /home/azureuser/config/storage:/config
     depends_on:
       - "kafka"
       - "db"
@@ -71,6 +79,10 @@ services:
     ports:
       - "8100:8100"
     network_mode: "host"
+    environment:
+      - TARGET_ENV: test
+    volumes:
+      - /home/azureuser/config/processing:/config
     depends_on:
       - "storage"
 
@@ -78,6 +90,10 @@ services:
     image: audit_log
     ports:
       - "8110:8110"
+    environment:
+      - TARGET_ENV: test
+    volumes:
+      - /home/azureuser/config/audit_log:/config
     depends_on:
       - "kafka"
 
