--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - TARGET_ENV: test
+      - TARGET_ENV: "test"
     volumes:
       - /home/azureuser/config/receiver:/config
     depends_on:
@@ -67,7 +67,7 @@ services:
     environment:
       DB_PASS: ""
     environment:
-      - TARGET_ENV: test
+      - TARGET_ENV: "test"
     volumes:
       - /home/azureuser/config/storage:/config
     depends_on:
@@ -80,7 +80,7 @@ services:
       - "8100:8100"
     network_mode: "host"
     environment:
-      - TARGET_ENV: test
+      - TARGET_ENV: "test"
     volumes:
       - /home/azureuser/config/processing:/config
     depends_on:
@@ -91,7 +91,7 @@ services:
     ports:
       - "8110:8110"
     environment:
-      - TARGET_ENV: test
+      - TARGET_ENV: "test"
     volumes:
       - /home/azureuser/config/audit_log:/config
     depends_on:
