--- a/Health_check/log_conf.yml
+++ b/Health_check/log_conf.yml
@@ -12,7 +12,7 @@ handlers:
     class: logging.FileHandler
     level: DEBUG
     formatter: simple
-    filename: app_health.log
+    filename: /logs/app_health.log
 loggers:
   basicLogger:
     level: DEBUG
