--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -135,6 +135,18 @@ services:
       - "80:80"
     networks:
       - "api.network"
+      
+  health_check:
+    image: health_check
+    ports:
+      - "8120"
+    networks:
+      - "api.network"
+    environment:
+      - TARGET_ENV=test
+    volumes:
+      - /home/azureuser/config/health_check:/config
+      - /home/azureuser/logs:/logs
 
 # Names our volume
 volumes:
