--- a/Processing/ci/Jenkinsfile
+++ b/Processing/ci/Jenkinsfile
@@ -1,2 +1,2 @@
 library 'Microservices_3855'
-python_build('processing','processing-app', 8100, 'Processing')
+python_build('processing','processing', 'Processing')
